<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Fundal semi-transparent -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.7" />

    <!-- Titlu + logo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="Recycling Application"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/recycling"
            android:contentDescription="@string/recycling_icon_desc"/>
    </LinearLayout>

    <!-- Cardul de autentificare -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:textColor="@color/my_primary"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please login with your information"
                android:alpha="0.7"
                android:paddingBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email Address"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_bg"
                android:padding="12dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_placeholder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_bg"
                android:padding="12dp"
                android:inputType="textPassword"
                android:hint="Enter your password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:weightSum="1">

                <CheckBox
                    android:id="@+id/rememberMeCheckBox"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:alpha="0.7" />

                <TextView
                    android:id="@+id/registerTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/register"
                    android:textColor="@color/linkColor" />
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Login"
                app:cornerRadius="32dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
